<resources>
    <string name="app_name">AVA</string>
    <string name="save">Save</string>
    <string name="speak">Speak</string>
    <string name="settings">Settings</string>
    <string name="wakeword">Wakeword: Hey Ava (heɪ  eɪvə)</string>
    <string name="musicplay">You can hear music: Play satisfaction by rolling stones</string>
    <string name="getweather">Ask for the weather: What\'s the weather in london</string>
    <string name="muchmore">And much more...</string>
    <string name="activedevelopment">This app is under active development to improve the quality and mass of skills</string>

    <string-array name="wakewordlist">
        <item>heyava</item>
    </string-array>

    <string-array name="webviewloading">
        <item>Loading</item>
        <item>Asking</item>
        <item>Dont load</item>
    </string-array>

    <string-array name="languages">
        <item>auto</item>
        <item>de</item>
        <item>en</item>
        <item>fr</item>
        <item>se</item>
        <item>es</item>
        <item>fr</item>
        <item>it</item>
    </string-array>


    <string-array name="ASR">
        <item>Mozilla</item>
        <item>Google</item>
        <item>IBM</item>
    </string-array>

    <string-array name="lckscr">
        <item>auto</item>
        <item>Off</item>
        <item>On</item>
    </string-array>


    <string-array name="hlpf">
        <item>Aus</item>
        <item>Alarm</item>
        <item>SMS</item>
        <item>Call</item>
        <item>SMS + Alarm</item>
    </string-array>


    <string name="loadWeb">Do you want to load this URL ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="language">language</string>
    <string name="assistant">assistant</string>
    <string name="wakewordhint">The function of the background wakeword listener is only available on Android 10 and higher</string>
    <string name="agree">AGREE</string>
    <string name="diagree">DISAGREE</string>
    <string name="disclaimer">DISCLAIMER</string>
    <string name="acceptingdisclaimer">I accept the conditions listed under the link</string>
    <string name="speechrecognitionengine">Speech recognition</string>
    <string name="stoprec">stop recording</string>

</resources>
