<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#40B2B2"
    android:orientation="vertical"
    android:theme="@style/AppTheme"
    tools:context="io.aware.ava.MainActivity">

    <LinearLayout
        android:id="@+id/disclaim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <WebView
            android:id="@+id/browser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:visibility="visible"></WebView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/disagree"
                style="@android:style/TextAppearance.Material.Widget.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:text="@string/diagree" />

            <Button
                android:id="@+id/agree"
                style="@android:style/TextAppearance.Material.Widget.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:text="@string/agree" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            app:srcCompat="@drawable/avalogo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:id="@+id/wakewordhint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/wakewordhint"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:visibility="gone" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:paddingBottom="20dp"
            android:text="@string/wakeword"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/assistant"
            style="@android:style/TextAppearance.Material.Widget.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:text="Hey Ava" />

        <Button
            android:id="@+id/stopbutton"
            style="@android:style/TextAppearance.Material.Widget.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:text="Stop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/settingsButton"
                style="@android:style/TextAppearance.Material.Widget.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:text="@string/settings" />

            <Button
                android:id="@+id/skillsbutton"
                style="@android:style/TextAppearance.Material.Widget.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:text="Skills" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>